# jval

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SPEC.md  pyproject.toml  test.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: run-tests.yml
jval/: __init__.py  __main__.py  errors.py  validation.py
tests/all_null/: all_null.json
tests/card/: card.jval.json  card.out
tests/dict_type/: dict_type.json  dict_type.jval.json
tests/empty_dict_literal/: empty_dict_literal.jval.json  empty_dict_literal.out
tests/empty_in_json_but_not_in_schema/: empty_in_json_but_not_in_schema.json  empty_in_json_but_not_in_schema.out
tests/empty_in_schema_but_not_in_json/: empty_in_schema_but_not_in_json.json  empty_in_schema_but_not_in_json.jval.json  empty_in_schema_but_not_in_json.out
tests/empty_list_literal/: empty_list_literal.jval.json  empty_list_literal.out
tests/extra_field_in_json/: extra_field_in_json.json  extra_field_in_json.out
tests/extra_field_in_json_2/: extra_field_in_json_2.json  extra_field_in_json_2.out
tests/incorrect_type_in_schema/: incorrect_type_in_schema.json
tests/invalid_complex_schema/: invalid_complex_schema.json  invalid_complex_schema.jval.json  invalid_complex_schema.out
tests/invalid_schema/: invalid_schema.json  invalid_schema.jval.json  invalid_schema.out
tests/invalid_type_in_json/: invalid_type_in_json.json  invalid_type_in_json.out
tests/list_of_literals/: list_of_literals.out
tests/list_type/: list_type.json  (+1 more)
(+33 files in other folders)
